# api_rust

./: .dockerignore  Cargo.toml  DOCKER.md  Dockerfile  Dockerfile.frontend  README.md  docker-compose.yml  docker.ps1  nginx.conf  run.ps1
.github/: copilot-instructions.md
frontend/: index.html  server.ps1
src/: main.rs
src/db/: mongo.rs
src/handlers/: auth.rs  mod.rs  tareas.rs
src/models/: mod.rs  tarea.rs  usuario.rs
src/routes/: mod.rs
src/utils/: jwt.rs
