[package]
name = "api_tareas"
version = "0.1.0"
edition = "2021"

[dependencies]
axum = { version = "0.7", features = ["json"] }
tokio = { version = "1", features = ["macros", "rt-multi-thread"] }
mongodb = { version = "2", features = ["tokio-runtime"] }
serde = { version = "1", features = ["derive"] }
chrono = { version = "0.4", features = ["serde"] }
bson = { version = "2", features = ["chrono-0_4"] }
tower = "0.4"
tower-http = { version = "0.5", features = ["cors"] }
futures = "0.3"
